<resources>
    <string name="app_name">HouseholdLedger</string>
    //메인 탭 메뉴
    <string name="Calendar">달력</string>
    <string name="SpendList">목록</string>
    <string name="Statistics">통계</string>
    <string name="Setting">설정</string>

    //달력
    <string name="Monday">월</string>
    <string name="Tuesday">화</string>
    <string name="Wednesday">수</string>
    <string name="Thursday">목</string>
    <string name="Friday">금</string>
    <string name="Saturday">토</string>
    <string name="Sunday">일</string>
    //추가창
    <string name="Classification">분류</string>
    <string name="SumOfMoney">금액</string>
    <string name="PaymentMethod">결제 수단</string>
    <string name="Content">내용</string>
    <string name="Date">날짜</string>


    <string name="Confirm">확인</string>
    <string name="Cancel">취소</string>
    //지출 세부 내역
    <string name="SpendListTitle">세부계획</string>

    //팝업 선택 달력력
    <string name="January">1월</string>
    <string name="February">2월</string>
    <string name="March">3월</string>
    <string name="April">4월</string>
    <string name="May">5월</string>
    <string name="June">6월</string>
    <string name="July">7월</string>
    <string name="August">8월</string>
    <string name="September">9월</string>
    <string name="October">10월</string>
    <string name="November">11월</string>
    <string name="December">12월</string>

</resources>
