<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
        <Button
                android:id="@+id/PrevYearBut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/CalendarPopUpYearTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/NextYearBut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <TableLayout
            android:id="@+id/CalendarMonthTableLayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/MONTH1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="42sp"
                    android:text="@string/January"/>
            <TextView
                    android:id="@+id/MONTH2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="42sp"
                    android:text="@string/February"/>
            <TextView
                    android:id="@+id/MONTH3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="42sp"
                    android:text="@string/March"/>
            <TextView
                    android:id="@+id/MONTH4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="42sp"
                    android:text="@string/April"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/MONTH5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="42sp"
                    android:text="@string/May"/>
            <TextView
                    android:id="@+id/MONTH6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="42sp"
                    android:text="@string/June"/>
            <TextView
                    android:id="@+id/MONTH7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="42sp"
                    android:text="@string/July"/>
            <TextView
                    android:id="@+id/MONTH8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="42sp"
                    android:text="@string/August"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/MONTH9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="42sp"
                    android:text="@string/September"/>
            <TextView
                    android:id="@+id/MONTH10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="42sp"
                    android:text="@string/October"/>
            <TextView
                    android:id="@+id/MONTH11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="42sp"
                    android:text="@string/November"/>
            <TextView
                    android:id="@+id/MONTH12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="42sp"
                    android:text="@string/December"/>
        </TableRow>


    </TableLayout>

</LinearLayout>