<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:gravity="center">
        <Button
                android:id="@+id/PrevMonthBut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/CalendarYearAndMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30sp"/>
        <Button
                android:id="@+id/NextMonthBut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Sunday"
                android:textSize="24sp"
                android:textColor="@color/red"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Monday"
                android:textSize="24sp"
                android:textColor="@color/black"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Tuesday"
                android:textSize="24sp"
                android:textColor="@color/black"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Wednesday"
                android:textSize="24sp"
                android:textColor="@color/black"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Thursday"
                android:textSize="24sp"
                android:textColor="@color/black"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Friday"
                android:textSize="24sp"
                android:textColor="@color/black"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Saturday"
                android:textSize="24sp"
                android:textColor="@color/blue"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/CalendarMonthRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>